# ds

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  bench_report.py
.githooks/: pre-commit  pre-push
compiler_systems/: BENCHMARKS.md  IMPLEMENTATION.md  README.md
compiler_systems/src/: CMakeLists.txt  data_oriented_index_arena_trie.hpp  deque_arena_trie.hpp  index_arena_trie.hpp  ptr_trie.hpp  redundant_connection.hpp  redundant_connection_test.cpp  trie.hpp  trie_bench.cpp  trie_test.cpp  union_find.hpp  union_find_bench.cpp  union_find_test.cpp  word_search.hpp  word_search_test.cpp
concurrency/: README.md
fundamentals/: README.md
fundamentals/src/: CMakeLists.txt  clone_graph.hpp  clone_graph_test.cpp  coin_change.hpp  coin_change_test.cpp  course_schedule.hpp  course_schedule_test.cpp  edit_distance.hpp  edit_distance_test.cpp  house_robber.hpp  house_robber_test.cpp  knapsack.hpp  knapsack_test.cpp  longest_common_subsequence.hpp  longest_common_subsequence_test.cpp  longest_palindromic_substring.hpp  longest_palindromic_substring_test.cpp  min_heap.hpp  min_heap_test.cpp  min_path_sum.hpp  min_path_sum_test.cpp  network_delay_time.hpp  network_delay_time_bench.cpp  network_delay_time_test.cpp  number_of_islands.hpp  number_of_islands_test.cpp
interview_staples/: README.md
performance_oriented/: README.md
performance_oriented/src/: CMakeLists.txt  alloc_counter.hpp  chaining_hash_map.hpp  chaining_hash_map_test.cpp  chaining_hash_map_v2.hpp  hash_map_bench.cpp  hash_map_bench_hypotheses.md  hash_map_bench_results.md  hash_map_blog_plan.md  hash_map_final_scoreboard.md  hash_map_memory_analysis.md  hash_map_pattern_bench.cpp  hash_map_perf_improvements.md  hash_map_post1_draft.md  hash_map_post1_outline.md  hash_map_prefetching_analysis.md  hash_map_robin_hood_three_way_analysis.md  hash_map_robin_hood_v2_analysis.md  hash_map_test.cpp  linear_probing_hash_map.hpp  linear_probing_hash_map_v2.hpp  robin_hood_hash_map.hpp  robin_hood_hash_map_v2.hpp  std_unordered_map_adapter.hpp
performance_oriented/src/hashmap/: CMakeLists.txt  chaining_hash_map.hpp  chaining_hash_map_v2.hpp  chaining_pool_hash_map.hpp  hash_map_bench.cpp  hash_map_bench_helpers.hpp  hash_map_optimization_bench.cpp  hash_map_pattern_bench.cpp  hash_map_test.cpp  key_distribution_dump.cpp  linear_probing_hash_map.hpp  linear_probing_hash_map_merged.hpp  robin_hood_stored_dist_hash_map.hpp
performance_oriented/src/hashmap/notes/: hash_map_bench_environment.md  hash_map_bench_results.md  hash_map_bench_scenarios.md  hash_map_blog_plan.md  hash_map_fibonacci_hash_analysis.md  hash_map_final_scoreboard.md  hash_map_key_generation.md  hash_map_lp_cluster_contagion.md  hash_map_memory_analysis.md  hash_map_number_update_plan.md  hash_map_pattern_bench_design.md  hash_map_perf_findings.md  hash_map_post1_outline.md  hash_map_robin_hood_three_way_analysis.md
posts/: hash_map_baseline.md  network_delay_post.md  trie_post.md  trie_post_v2.md  union_find_post.md
reports/: hash_map_bench_release.csv  hash_map_mem_bench_release.csv  trie_bench_debug.csv  trie_bench_release.csv
scripts/: bench_compare.py  bench_extract.py  bench_report.py  optimization_bench_extract.py  pattern_bench_extract.py  plot_key_distribution.py  verify_identity_hash.sh
